focus visibility fixed (i hope)

--- a/styles/style.css
+++ b/styles/style.css
@@ -208,8 +208,11 @@ ol {
 .more-button {
   inline-size: 99%;
   block-size: 34px;
-  margin: 0 auto 2px;
+  margin: 0 auto 3px;
 }
+
+/* Не понимаю, почему у вас в браузере "съедается" один пиксель в этом месте...
+У меня при проверке этой проблемы не было. Добавил еще один пиксель в нижний маргин. */
 
 .title {
   padding-block-end: 26px;
